--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:api": "python3 test_api.py",
+    "api:status": "curl -s http://localhost:3000/api/v1/status | python3 -m json.tool",
+    "api:docs": "curl -s http://localhost:3000/api/v1 | python3 -m json.tool"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "canvas": "^3.1.0",
+    "multer": "^2.0.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
