--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:api": "python3 test_api.py",
-    "api:status": "curl -s http://localhost:3000/api/v1/status | python3 -m json.tool",
-    "api:docs": "curl -s http://localhost:3000/api/v1 | python3 -m json.tool"
+    "test:api": "cd tests && python test_all_features.py",
+    "api:status": "curl -s http://localhost:3000/api/status | python -m json.tool",
+    "api:docs": "curl -s http://localhost:3000/api | python -m json.tool",
+    "update": "git pull origin main && npm install",
+    "update:force": "git fetch --all && git reset --hard origin/main && npm install",
+    "update:rebuild": "npm run update && npm run build"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
