--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,5 @@ next-env.d.ts
 # png
 *.png
 
-tests/*
-!tests/test_all*.py
-!tests/test*.png
-!tests/custom*.json
-!tests/*.ipynb
+tests/*.png
+!tests/test_image.png
